RESOLVED FIXED258125
clip-path: inset() radii does not render on specific sizes of element, clip-path and radius
https://bugs.webkit.org/show_bug.cgi?id=258125
Summary clip-path: inset() radii does not render on specific sizes of element, clip-p...
Tom Bigelajzen
Reported 2023-06-15 06:09:07 PDT
Created attachment 466698 [details] a simplified usecase where clip-path inset radius does not render When using clip-path: inset() with border-radius values, the radius is not rendered on specific cases of element size, radius size and clip-path size. In the attached code example you can see an element 661px wide and 445px high with "clip-path: inset(11.2923% round 50% 50% 0% 0%)." The radius of these exact dimensions fails consistently (At least on MacOS 13.2.1 Safari 16.3, Safari Tech Preview 171, and iOS 16.5). Any change to the width, height, clip-path size or border-radius will "fix" the issue. Also attached a link to an animated codepen where different element sizes and different radius values "glitch" on different points on the timeline
Attachments
a simplified usecase where clip-path inset radius does not render (485 bytes, text/html)
2023-06-15 06:09 PDT, Tom Bigelajzen
no flags
Tom Bigelajzen
Comment 1 2023-06-15 06:09:35 PDT
Simon Fraser (smfr)
Comment 2 2023-06-15 10:12:06 PDT
Interesting bug, thanks for the report! I can reproduce.
Radar WebKit Bug Importer
Comment 3 2023-06-15 10:12:17 PDT
Ahmad Saleem
Comment 4 2026-04-05 13:53:37 PDT
EWS
Comment 5 2026-04-06 09:47:17 PDT
Committed 310643@main (785dda5a7b96): <https://commits.webkit.org/310643@main> Reviewed commits have been landed. Closing PR #62086 and removing active labels.
Ahmad Saleem
Comment 6 2026-04-07 20:19:21 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/59035
Note You need to log in before you can comment on or make changes to this bug.