Source/WebCore/platform/graphics/Path.cpp
@@ -174,8 +174,18 @@ void Path::addRoundedRect(const FloatRoundedRect& roundedRect, PathRoundedRect::
         return;
 
     if (!roundedRect.isRenderable()) {
-        // If all the radii cannot be accommodated, return a rect.
-        addRect(roundedRect.rect());
+        // If radii cannot be accommodated (e.g. due to floating-point precision
+        // after constraint scaling), adjust them to fit rather than dropping them.
+        auto adjustedRect = roundedRect;
+        adjustedRect.adjustRadii();
+        if (!adjustedRect.isRounded()) {
+            addRect(adjustedRect.rect());
+            return;
+        }
+        if (isEmpty())
+            m_data = PathSegment(PathRoundedRect { adjustedRect, strategy });
+        else
+            protect(ensureImpl())->add(PathRoundedRect { adjustedRect, strategy });
         return;
     }
 
